<resources>
    <string name="app_name">Qodem</string>
    <string name="sign_in_cancelled">Sign in Cancelled</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_error">Unknown error</string>
    <string name="blood_bank_working_days">Working Days:</string>
    <string name="blood_bank_work_hours">Work hours:</string>
    <string name="home_find_donors">find donors</string>
    <string name="home_add_donor">Add Donor</string>
    <string name="home_snap_and_share"><![CDATA[snap & share]]></string>
    <string name="home_blood_journey">blood journey</string>
    <string name="item_home">Home</string>
    <string name="item_map">Map</string>
    <string name="item_Community">Community</string>
    <string name="button_book_an__appointment">book an appointment</string>
    <string name="no_records_massage">Our records indicate you haven\'t donated yet.</string>
    <string name="remaining_days">Day</string>
    <string name="remaining_hours">Hours</string>
    <string name="appointment_info">Appointment info</string>
    <string name="sign_out">sign out</string>
    <string name="remaining_minutes">Minutes</string>
    <string name="remaining_seconds">Second</string>
    <string name="verify_appointment">Verify</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="title_activity_login" translatable="false">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="sign_up">Sign up</string>
    <string-array name="blood_types">
        <item>O+</item>
        <item>O-</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>
    <string-array name="genders">
        <item>Male</item>
        <item>Female</item>
    </string-array>
    <string-array name="id_types">
        <item>Passport</item>
        <item>National ID</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="pre_screening_request_explain">These questions will help you to determine your eligibility for blood donation, and will save you time and effort, It won\'t take you more than 30 secs!</string>
    <string name="pre_screening_question_1">Are you suffering form fever or flu or taking antibiotic within last 10 days?</string>
    <string name="question_answer_yes">Yes</string>
    <string name="question_answer_no">No</string>
    <string name="pre_screening_question_2">Have you taken aspirin within last 48 hours?</string>
    <string name="pre_screening_question_3">Have you donated blood within last 60 days?</string>
    <string name="pre_screening_question_4">have you had a surgery within last 12 months?</string>
    <string name="pre_screening_question_5">Within last 12 months, have you exposed to an accidental needle-stick, or beauty needles, or perform (hijama) or a tattoo, or piercing?</string>
    <string name="pre_screening_question_6">have you been traveling outside country during previous 28 days?</string>
    <string name="pre_screening_question_7">Have you been infected with the Corona virus during the last month, or suspected of infection, or contact with an infected person?</string>
    <string name="please_select_blood_bank">Please select blood Bank</string>
    <string name="app_description1">Donate now and save lives!</string>
    <string name="app_description2">Qodem is an app that helps to streamline blood donation which puts the power to save a life in the palm of your hand.</string>
    <string name="book_appointment">Book Appointment</string>
    <string name="book_appointment_feature1_description">Schedule and manage your blood donation appointment from the convenient of your own Phone.</string>
    <string name="online_pre_screening_test">Online Pre-Screening Test</string>
    <string name="online_pre_screening_feature2_description">Answer pre-screening questions straight from the app itself.</string>
    <string name="blood_banks">Blood Banks</string>
    <string name="blood_banks_list_feature2_description">List and locations of blood banks to easily decide which one is closer to you.</string>
    <string name="blood_bank_icon" translatable="false">Blood bank icon</string>
    <string name="qr_code">Qr code</string>
    <string name="directions_icon" translatable="false">Directions icon</string>
    <string name="donation_campaigns">Donation campaigns</string>
    <string name="infographics">Infographics</string>
    <string name="proceed_now">Proceed Now</string>
    <string name="pre_screening_request_icon" translatable="false">Pre screening request icon</string>
    <string name="date_icon" translatable="false">date icon</string>
    <string name="time_icon" translatable="false">time icon</string>
    <string name="phone_icon" translatable="false">Phone icon</string>
    <string name="infographic_image" translatable="false">infographic image</string>
    <string name="full_name">Full Name</string>
    <string name="arrow_icon" translatable="false">arrow icon</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="blood_type">Blood Type</string>
    <string name="gender">Gender</string>
    <string name="city">City</string>
    <string name="id">ID</string>
    <string name="save">Save</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="id_type">ID Type</string>
    <string name="id_number">ID Number</string>
    <string name="select_time">Select Time</string>
    <string name="select_day">Select Day</string>
    <string name="congratulations">Congratulations!</string>
    <string name="you_are_eligible_for_the_donation">You are eligible for the donation</string>
    <string name="next">Next</string>
    <string name="to_complete_the_booking_process_you_must_answer_the_following_questions">To complete the booking process, you must answer the following questions</string>
    <string name="blood_donation_campaigns">Blood Donation Campaigns</string>
    <string name="rewards">Rewards</string>
    <string name="notification">Notification</string>
    <string name="feature_under_development">Feature under development.</string>
    <string name="time_default_placeholder" translatable="false">00</string>
    <string name="blood_bank_placeholder">al raqi unversity hospital</string>
    <string name="city_placeholder">Khartoum</string>
    <string name="appointment_date_placeholder">Monday, 5 December 2022</string>
    <string name="appointment_time_placeholder" translatable="false">03:00 PM</string>
    <string name="duration_placeholder">15 min</string>
    <string name="working_days_placeholder">Sunday to Thursday</string>
    <string name="working_hours_placeholder" translatable="false">08:00 AM - 03:00 PM</string>
    <string name="add_time_placeholder">5 days ago</string>
    <string name="day_placeholder">Thursday</string>
    <string name="day_in_month_placeholder" translatable="false">5</string>
    <string name="month_placeholder">January</string>
    <string name="item_time_placeholder" translatable="false">00:00</string>
    <string name="am_pm_placeholder" translatable="false">AM</string>
    <string name="user_name_placeholder" translatable="false">User name</string>
    <string name="date_of_birth_placeholder" translatable="false">16/5/1960</string>
    <string name="blood_type_placeholder" translatable="false">B+</string>
    <string name="gender_placeholder" translatable="false">male</string>
    <string name="id_type_placeholder" translatable="false">Passport</string>
    <string name="id_number_placeholder" translatable="false">P 0123456789</string>
    <string name="drag_right">drag infographic right</string>
    <string name="drag_left">drag infographic left</string>
    <string name="edit_user_info">Edit user info</string>
    <string name="language">Language</string>
    <string name="language_placeholder">English</string>
    <string name="english">English</string>
    <string name="arabic">العربية</string>
    <string name="please_select_day">Please select day</string>
    <string name="please_select_time">Please select time</string>
    <string name="please_select_day_and_time"><![CDATA[Please select day & time]]></string>
    <string name="network_not_available">Network Not Available</string>
    <string name="scan_authenticate_qr">Please scan QR code to authenticate the appointment.</string>
    <string name="camera_permission_granted_message">Permission is granted. You would use the camera now.</string>
    <string name="not_eligible_to_donate_message">Your are not eligible to donate blood</string>
    <string name="answere_all_questions">All questions are required to be answered</string>
</resources>