<?xml version="1.0" encoding="utf-8"?>

<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cardView"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/small_layout_margin"
    android:checkable="true"
    android:clickable="true"
    android:focusable="true"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/item_blood_bank_padding">

        <ImageView
            android:id="@+id/image_blood_bank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin"
            android:contentDescription="@string/blood_bank_icon"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_local_hospital"
            app:tint="@color/primaryColor" />

        <TextView
            android:id="@+id/text_blood_bank"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_layout_margin"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintBottom_toBottomOf="@+id/image_blood_bank"
            app:layout_constraintEnd_toStartOf="@+id/image_blood_bank_place"
            app:layout_constraintStart_toEndOf="@+id/image_blood_bank"
            app:layout_constraintTop_toTopOf="@+id/image_blood_bank"
            tools:text="hospital name" />

        <ImageView
            android:id="@+id/image_blood_bank_place"
            android:layout_width="@dimen/clickable_icon_width"
            android:layout_height="@dimen/clickable_icon_height"
            android:clickable="true"
            android:contentDescription="@string/directions_icon"
            android:focusable="true"
            android:padding="@dimen/clickable_icon_padding"
            app:layout_constraintBottom_toBottomOf="@+id/image_blood_bank"
            app:layout_constraintEnd_toEndOf="@+id/image_work_hours"
            app:layout_constraintStart_toStartOf="@+id/image_work_hours"
            app:layout_constraintTop_toTopOf="@+id/image_blood_bank"
            app:srcCompat="@drawable/ic_place"
            app:tint="@color/primaryColor" />

        <TextView
            android:id="@+id/text_time_to_place"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/body_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/image_blood_bank_place"
            app:layout_constraintStart_toEndOf="@+id/image_blood_bank_place"
            app:layout_constraintTop_toTopOf="@+id/image_blood_bank_place"
            tools:text="@string/duration_placeholder" />

        <ImageView
            android:id="@+id/image_working_days"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/mid_layout_margin"
            android:contentDescription="@string/date_icon"
            app:layout_constraintStart_toStartOf="@+id/image_blood_bank"
            app:layout_constraintTop_toBottomOf="@+id/image_blood_bank"
            app:srcCompat="@drawable/ic_menu_calendar"
            app:tint="@color/primaryColor" />

        <TextView
            android:id="@+id/text_working_days_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_layout_margin"
            android:text="@string/blood_bank_working_days"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintBottom_toBottomOf="@+id/image_working_days"
            app:layout_constraintStart_toEndOf="@+id/image_working_days"
            app:layout_constraintTop_toTopOf="@+id/image_working_days" />

        <TextView
            android:id="@+id/text_working_days_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/small_layout_margin"
            android:layout_marginEnd="@dimen/small_layout_margin"
            android:layout_marginBottom="@dimen/small_layout_margin"
            android:text="@string/working_days_placeholder"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/body_text_size"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/divider2"
            app:layout_constraintStart_toStartOf="@+id/text_working_days_label"
            app:layout_constraintTop_toBottomOf="@+id/text_working_days_label" />

        <ImageView
            android:id="@+id/image_work_hours"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_layout_padding"
            android:contentDescription="@string/time_icon"
            app:layout_constraintBottom_toBottomOf="@+id/image_working_days"
            app:layout_constraintStart_toEndOf="@+id/divider2"
            app:layout_constraintTop_toTopOf="@+id/image_working_days"
            app:srcCompat="@drawable/ic_time"
            app:tint="@color/primaryColor" />

        <TextView
            android:id="@+id/text_work_hours_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/blood_bank_work_hours"
            android:textColor="@color/secondaryDarkColor"
            app:layout_constraintBottom_toBottomOf="@+id/image_work_hours"
            app:layout_constraintStart_toStartOf="@+id/text_work_hours_field"
            app:layout_constraintTop_toTopOf="@+id/image_work_hours" />

        <TextView
            android:id="@+id/text_work_hours_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_layout_margin"
            android:text="@string/working_hours_placeholder"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/body_text_size"
            app:layout_constraintBottom_toBottomOf="@+id/text_working_days_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/image_work_hours"
            app:layout_constraintTop_toTopOf="@+id/text_working_days_field" />

        <TextView
            android:id="@+id/text_add_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small_layout_margin"
            android:text="@string/add_time_placeholder"
            android:textColor="@color/secondaryDarkColor"
            android:textSize="@dimen/body_text_size"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@+id/text_time_to_place"
            app:layout_constraintEnd_toEndOf="@+id/text_work_hours_field"
            app:layout_constraintStart_toEndOf="@+id/text_time_to_place" />

        <View
            android:id="@+id/divider"
            android:layout_width="0dp"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/primaryDarkColor"
            app:layout_constraintBottom_toTopOf="@+id/image_work_hours"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/image_blood_bank_place" />

        <View
            android:id="@+id/divider2"
            android:layout_width="@dimen/divider_width"
            android:layout_height="0dp"
            android:background="?android:attr/listDivider"
            android:backgroundTint="@color/primaryDarkColor"
            app:layout_constraintBottom_toBottomOf="@+id/text_work_hours_field"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/image_work_hours" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/image_phone_number"
            android:layout_width="@dimen/clickable_icon_width"
            android:layout_height="@dimen/clickable_icon_height"
            android:background="@color/secondaryLightColor"
            android:clickable="true"
            android:contentDescription="@string/phone_icon"
            android:focusable="true"
            android:padding="@dimen/clickable_icon_padding"
            android:tint="@color/secondaryColor"
            android:visibility="visible"
            app:layout_constraintBottom_toBottomOf="@+id/text_time_to_place"
            app:layout_constraintEnd_toEndOf="@+id/text_work_hours_field"
            app:layout_constraintStart_toEndOf="@+id/text_time_to_place"
            app:layout_constraintTop_toTopOf="@+id/text_time_to_place"
            app:shapeAppearanceOverlay="@style/Circular"
            app:srcCompat="@drawable/ic_phone"
            app:strokeColor="@color/secondaryColor"
            app:strokeWidth="@dimen/stroke_size" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>